--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,15 @@ body {
   background-color: #444444;
   color: #fefefe;
 }
+
+button {
+  background-color: #444444;
+  color: #fefefe;
+  cursor: pointer;
+  border: 1px solid orange;
+}
+
+button:hover {
+  background-color: #fefefe;
+  color: #444444;
+}
